@@ -12,6 +12,8 @@ GOST is GOvernment STandard of Russian Federation (and Soviet Union).
 * GOST R 34.10-2001 (RFC 5832) public key signature function
 * GOST R 34.10-2012 (RFC 7091) public key signature function
 * various 34.10 curve parameters included
+* Coordinates conversion from twisted Edwards to Weierstrass form and
+  vice versa
 * VKO GOST R 34.10-2001 key agreement function (RFC 4357)
 * VKO GOST R 34.10-2012 key agreement function (RFC 7836)
 * 28147-89 and CryptoPro key wrapping (RFC 4357)
