@@ -7,6 +7,8 @@
 @item 4.0
     @itemize
     @item 34.10-2012 TC26 twisted Edwards curve related parameters
+    @item Coordinates conversion from twisted Edwards to Weierstrass
+        form and vice versa
     @item More test vectors
     @item Backward incompatible Sbox and curves parameters renaming,
         to comply with OIDs identifying them:
