@@ -38,6 +38,8 @@ Currently supported algorithms are:
     (@url{https://tools.ietf.org/html/rfc7091.html, RFC 7091})
     public key signature function
 @item various 34.10 curve parameters included
+@item Coordinates conversion from twisted Edwards to Weierstrass
+    form and vice versa
 @item VKO GOST R 34.10-2001 key agreement function
     (@url{https://tools.ietf.org/html/rfc4357.html, RFC 4357})
 @item VKO GOST R 34.10-2012 key agreement function
