@@ -1,5 +1,7 @@
 4.0:
     * 34.10-2012 TC26 twisted Edwards curve related parameters
+    * Coordinates conversion from twisted Edwards to Weierstrass
+      form and vice versa
     * More test vectors
     * Backward incompatible Sbox and curves parameters renaming, to
       comply with OIDs identifying them:
